# tree_menu

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SCREENSHOTS.md  env-template  pyproject.toml
src/: manage.py
src/draw_menu/: admin.py  container.py  models.py  urls.py  utils.py  views.py
src/draw_menu/migrations/: 0001_initial.py
src/draw_menu/repositories/: __init__.py  errors.py  menu_item.py
src/draw_menu/templates/: menu.html
src/draw_menu/templates/htmx/: submenu.html
src/draw_menu/templatetags/: draw_menu.py
src/settings/: envs.py  errors.py  settings.py  urls.py
src/settings/compontents/: apps.py  databases.py  templates.py
src/static/: db_dump.json
src/static/css/: style.css
src/templates/: index.html
